--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "http-server": "^14.1.0",
     "mongoose": "^6.1.8",
     "socket.io": "^4.4.1"
   }
